<resources>
    <string name="app_name">ObjectAnimatorDemo</string>
    <string name="start_scale_x">StartScaleXAnimator</string>
    <string name="start_scale_y">StartScaleyAnimator</string>
    <string name="start_alpha">StartAlphaAnimator</string>
    <string name="start_rotate_x">StartRotateXAnimator</string>
    <string name="start_rotate_y">StartRotateYAnimator</string>
    <string name="start_rotate">StartRotateAnimator</string>
    <string name="start_translation_x">StartTranslationXAnimator</string>
    <string name="start_translation_y">StartTranslationYAnimator</string>
</resources>
