<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2">

    <ImageView
        android:id="@+id/iv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <Button
                style="@style/custom_button"
                android:onClick="startScaleXAnimator"
                android:text="@string/start_scale_x" />

            <Button
                style="@style/custom_button"
                android:onClick="startScaleYAnimator"
                android:text="@string/start_scale_y" />

            <Button
                style="@style/custom_button"
                android:onClick="startAlphaAnimator"
                android:text="@string/start_alpha" />

            <Button
                style="@style/custom_button"
                android:onClick="startRotateAnimator"
                android:text="@string/start_rotate" />

            <Button
                style="@style/custom_button"
                android:onClick="startRotateXAnimator"
                android:text="@string/start_rotate_x" />

            <Button
                style="@style/custom_button"
                android:onClick="startRotateYAnimator"
                android:text="@string/start_rotate_y" />

            <Button
                style="@style/custom_button"
                android:onClick="startTranslationXAnimator"
                android:text="@string/start_translation_x" />

            <Button
                style="@style/custom_button"
                android:onClick="startTranslationYAnimator"
                android:text="@string/start_translation_y" />
        </GridLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/custom_button"
            android:text="@string/app_name"
            android:onClick="startSetAnimator"/>
    </LinearLayout>

</LinearLayout>
